PROJECT(svpn)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(PROJECT_ROOT_PATH "${CMAKE_SOURCE_DIR}")
SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_ROOT_PATH}/bin")
SET(LIBRARY_OUTPUT_PATH "${PROJECT_ROOT_PATH}/lib")
INCLUDE_DIRECTORIES("${PROJECT_ROOT_PATH}/include")
LINK_DIRECTORIES("${PROJECT_ROOT_PATH}/lib")
ADD_SUBDIRECTORY(src)
